--- a/index.html
+++ b/index.html
@@ -108,12 +108,13 @@
               Together, let’s make a difference.
             </p> -->
 
-            <a href="https://drive.google.com/file/d/1nRD6SKp1q-rJYBKKb9_IdDmAEBQoKCR1/view?usp=sharing" target="_blank" class="btn btn-primary">Download Now</a>
+            <!-- <a href="./images/Calendar 2024 q dropped.jpg"  download="Calendar.jpg" class="btn btn-primary">Download Now</a> -->
+            <a href="https://drive.google.com/file/d/1wkepnizFt0Ay8rjACTcmlZZctQQdO1ZX/view?usp=sharing" download="Calendar.jpg" class="btn btn-primary">Download Now</a>
 
           </div>
 
           <figure class="hero-banner">
-            <img src="./images/774shots_so.png" width="720" height="673" alt="hero banner" class="w-100">
+            <img src="./images/715shots_so.png" width="720" height="673" alt="hero banner" class="w-100">
           </figure>
 
         </div>
