--- a/index.html
+++ b/index.html
@@ -49,30 +49,30 @@
         <ul class="navbar-list">
 
           <li>
-            <a href="#home" class="navbar-link" data-nav-link>Home</a>
+            <a href="https://elephantjourney.info/#home" class="navbar-link" data-nav-link>Home</a>
           </li>
 
 
           <li>
-            <a href="#service" class="navbar-link" data-nav-link>Features</a>
+            <a href="https://elephantjourney.info/#service" class="navbar-link" data-nav-link>Features</a>
           </li>
 
           <li>
-            <a href="#about" class="navbar-link" data-nav-link>About Us</a>
+            <a href="https://elephantjourney.info/#about" class="navbar-link" data-nav-link>About Us</a>
           </li>
 
           <li>
-            <a href="#contact" class="navbar-link" data-nav-link>Contact Us</a>
+            <a href="https://elephantjourney.info/#contact" class="navbar-link" data-nav-link>Contact Us</a>
           </li>
 <!-- 
           <li>
             <a href="#project" class="navbar-link" data-nav-link>News</a>
           </li> -->
 
-          <li>
-            <a href="https://drive.google.com/file/d/1nRD6SKp1q-rJYBKKb9_IdDmAEBQoKCR1/view?usp=sharing" target="_blank" class="btn btn-primary">Download Now</a>
+          <!-- <li>
+            <a href="https://drive.google.com/file/d/1nRD6SKp1q-rJYBKKb9_IdDmAEBQoKCR1/view?usp=sharing" target="_blank" class="btn btn-primary">Download App</a>
             
-          </li>
+          </li> -->
 
         </ul>
       </nav>
@@ -101,7 +101,7 @@
 
           <div class="hero-content">
 
-            <h1 class="h1 hero-title">Your Exclusive 2024 Calendar Awaits! 🐘✨</h1>
+            <h1 class="h1 hero-title">Nature Lover's Wild Exploration 2024 🌿📅 </h1>
 <!-- 
             <p class="hero-text">
               Uniting Vision, Awareness, and Action to Save Elephants and Combat Crimes. 
@@ -114,12 +114,12 @@
             <!-- <img src="./Calendar 2024.jpg" alt="Calendar" class="http">
             <button type="button" class="btn btn-primary" data-download="./Calendar 2024.jpg">Download</button> -->
 
-            <button onclick="download()" class="btn btn-primary"> Download Image </button>
+            <button onclick="download()" class="btn btn-primary"> Download Calendar </button>
 
           </div>
 
           <figure class="hero-banner">
-            <img src="./images/715shots_so.png" width="720" height="673" alt="hero banner" class="w-100">
+            <img src="./images/new.png" width="800" height="700" alt="hero banner" class="w-100">
           </figure>
 
         </div>
