--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="https://elephantjourney-web.web.app/" class="logo">
+      <a href="https://elephantjourney.info" class="logo">
         <img src="./images/logo banner for web.png" alt="" width="140" height="70">
       </a>
       
