--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           </div>
 
           <figure class="hero-banner">
-            <img src="./images/new.png" width="800" height="700" alt="hero banner" class="w-100">
+            <img src="./images/311shots_so.png" width="800" height="700" alt="hero banner" class="w-100">
           </figure>
 
         </div>
